Removed old-home from publishing. Fixed gap b/w navbars on sprints page

--- a/css/_uswds-theme-custom-styles.scss
+++ b/css/_uswds-theme-custom-styles.scss
@@ -507,7 +507,7 @@ h1, h2, h3 {
 
   &.sprint-nav {
     @include u-position('sticky');
-    top: 3.2em;
+    top: 3.1em;
     text-align: center;
     background-color: color("white");
     border-bottom: units($site-border-width) solid
